// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetPassword renders correctly with validations 1`] = `
<div
  className="css-cssveg"
>
  <form
    onSubmit={[Function]}
  >
    <label
      className="css-1735ppj"
      htmlFor="password"
    >
      Create a Password
    </label>
    <div
      className="inputClass"
    >
      <label
        className="inputLabelText"
        htmlFor=""
      />
      <input
        className="inputStyles singleInputField"
        disabled={false}
        id=""
        name="password"
        onChange={[Function]}
        placeholder="Enter a secure password"
        tabIndex={0}
        type="password"
        value=""
      />
    </div>
    <div
      className="css-iz7omn"
      data-test="test"
      onClick={[Function]}
    >
      <span
        className="css-dspf80 top"
      >
        <div
          className="tip is-hoverable css-1l7duel"
        >
          Show
          <div
            className="css-17g7mqh"
          />
        </div>
        <span
          className="tooltip-anchor"
          data-qa-selector="tooltip-anchor"
        >
          <i
            className="lp-icon"
          >
            view
          </i>
        </span>
      </span>
    </div>
  </form>
  <div
    className="css-1iurdo"
  >
    <p
      className="css-haw22i"
    >
      Please make sure your password contains:
    </p>
    <div
      className="css-1f6v04k"
    >
      <div
        className="css-142m6hg"
      >
        <i
          className="lp-icon"
        >
          check_circle
        </i>
        <div>
          at least 8 characters
        </div>
      </div>
      <div
        className="css-3aneet"
      >
        <i
          className="lp-icon"
        >
          check_circle
        </i>
        <div>
          an uppercase letter
        </div>
      </div>
      <div
        className="css-142m6hg"
      >
        <i
          className="lp-icon"
        >
          check_circle
        </i>
        <div>
          a number
        </div>
      </div>
      <div
        className="css-3aneet"
      >
        <i
          className="lp-icon"
        >
          check_circle
        </i>
        <div>
          a lowercase letter
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SetPassword renders correctly without validations 1`] = `
<div
  className="css-cssveg"
>
  <form
    onSubmit={[Function]}
  >
    <label
      className="css-1735ppj"
      htmlFor="password"
    >
      Create a Password
    </label>
    <div
      className="inputClass"
    >
      <label
        className="inputLabelText"
        htmlFor=""
      />
      <input
        className="inputStyles singleInputField"
        disabled={false}
        id=""
        name="password"
        onChange={[Function]}
        placeholder="Enter a secure password"
        tabIndex={0}
        type="password"
        value=""
      />
    </div>
    <div
      className="css-iz7omn"
      data-test="test"
      onClick={[Function]}
    >
      <span
        className="css-dspf80 top"
      >
        <div
          className="tip is-hoverable css-1l7duel"
        >
          Show
          <div
            className="css-17g7mqh"
          />
        </div>
        <span
          className="tooltip-anchor"
          data-qa-selector="tooltip-anchor"
        >
          <i
            className="lp-icon"
          >
            view
          </i>
        </span>
      </span>
    </div>
  </form>
</div>
`;
